--- a/index.html
+++ b/index.html
@@ -239,7 +239,10 @@
   let entries = {}; // { 'YYYY-MM-DD': { text: "...", status: 'win'|'loss' } }
 
   // --- util ---
-  const API_URL = 'http://localhost:3000/api';
+  // Use deployed server URL or fallback to localhost for development
+  const API_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
+    ? 'http://localhost:3000/api'
+    : 'https://trading-journal-sync.onrender.com/api';
   function pad(n){ return n<10? '0'+n : String(n); }
   function keyFor(y,m,d){ return `${y}-${pad(m)}-${pad(d)}`; } // m is 1..12
   
